Fix button size difference on mobile/small screens

--- a/src/assets/stylesheets/ui-root.scss
+++ b/src/assets/stylesheets/ui-root.scss
@@ -169,17 +169,27 @@ body.vr-mode {
   pointer-events: auto;
   cursor: pointer;
 
-  @media(max-width: 500px) {
-    flex-direction: column;
-    padding: 8px 8px;
-    right: 16px;
-    top: 80px;
+  @media(min-width: 501px) {
+    :local(.occupant-count) {
+      margin: 0px 8px;
+    }
   }
 
-  :local(.occupant-count) {
-    margin: 0 12px;
+  @media(max-width: 500px) {
+    flex-direction: column;
+    padding: 8px 0px;
+    right: 16px;
+    top: 80px;
+    width: 52px;
+    :local(.occupant-count) {
+      margin: 0px 0px;
+    }
+    svg {
+      width: 26px !important;
+    }
   }
 }
+
 :local(.presence-info) {
   @extend %unselectable;
   text-align: right;
@@ -200,13 +210,19 @@ body.vr-mode {
   cursor: pointer;
 
   @media(max-width: 500px) {
+    width: 52px;
     flex-direction: column;
-    padding: 8px 8px;
+    padding: 8px 0px;
+
+    svg {
+      width: 26px !important;
+    }
   }
 
   :local(.occupant-count) {
     margin: 0 12px;
   }
+
 }
 
 :local(.presence-info-selected) {
